src/api/nlopt.f90


        !
        ! stopping criteria
        !
        integer(c_int) function nlopt_set_stopval(opt,stopval) bind(c,name="nlopt_set_stopval")
            import c_int, c_double, c_ptr
            type(c_ptr), value :: opt
            real(c_double), value :: stopval
        end function
        real(c_double) function nlopt_get_stopval(opt) bind(c,name="nlopt_get_stopval")
            import c_double, c_ptr
            type(c_ptr), value :: opt
        end function

        integer(c_int) function nlopt_set_ftol_rel(opt,tol) bind(c,name="nlopt_set_ftol_rel")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), value :: tol
        end function
        real(c_double) function nlopt_get_ftol_rel(opt) bind(c,name="nlopt_get_ftol_rel")
            import c_double, c_ptr
            type(c_ptr), value :: opt
        end function
        integer(c_int) function nlopt_set_ftol_abs(opt,tol) bind(c,name="nlopt_set_ftol_abs")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), value :: tol
        end function
        real(c_double) function nlopt_get_ftol_abs(opt) bind(c,name="nlopt_get_ftol_abs")
            import c_double, c_ptr
            type(c_ptr), value :: opt
        end function

        integer(c_int) function nlopt_set_xtol_rel(opt,tol) bind(c,name="nlopt_set_xtol_rel")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), value :: tol
        end function
        real(c_double) function nlopt_get_xtol_rel(opt) bind(c,name="nlopt_get_xtol_rel")
            import c_double, c_ptr
            type(c_ptr), value :: opt
        end function
        integer(c_int) function nlopt_set_xtol_abs1(opt,tol) bind(c,name="nlopt_set_xtol_abs1")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), value :: tol
        end function
        integer(c_int) function nlopt_set_xtol_abs(opt,tol) bind(c,name="nlopt_set_xtol_abs")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), intent(in) :: tol(nlopt_get_dimension(opt))
        end function
        integer(c_int) function nlopt_get_xtol_abs(opt,tol) bind(c,name="nlopt_get_xtol_abs")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), intent(out) :: tol(nlopt_get_dimension(opt))
        end function

        integer(c_int) function nlopt_set_maxeval(opt,maxeval) bind(c,name="nlopt_set_maxeval")
            import c_int, c_ptr
            type(c_ptr), value :: opt
            integer(c_int), value :: maxeval
        end function
        integer(c_int) function nlopt_get_maxeval(opt) bind(c,name="nlopt_get_maxeval")
            import c_int, c_ptr
            type(c_ptr), value :: opt
        end function

        integer(c_int) function nlopt_get_numevals(opt) bind(c,name="nlopt_get_numevals")
            import c_int, c_ptr
            type(c_ptr), value :: opt
        end function

        integer(c_int) function nlopt_set_maxtime(opt,maxtime) bind(c,name="nlopt_set_maxtime")
            import c_int, c_double, c_ptr
            type(c_ptr), value :: opt
            real(c_double), value :: maxtime
        end function
        real(c_double) function nlopt_get_maxtime(opt) bind(c,name="nlopt_get_maxtime")
            import c_double, c_ptr
            type(c_ptr), value :: opt
        end function

        integer(c_int) function nlopt_force_stop(opt) bind(c,name="nlopt_force_stop")
            import c_int, c_ptr
            type(c_ptr), value :: opt
        end function
        integer(c_int) function nlopt_set_force_stop(opt,ival) bind(c,name="nlopt_set_force_stop")
            import c_int, c_ptr
            type(c_ptr), value :: opt
            integer(c_int), value :: ival
        end function
        integer(c_int) function nlopt_get_force_stop(opt) bind(c,name="nlopt_get_force_stop")
            import c_int, c_ptr
            type(c_ptr), value :: opt
        end function


        !
        ! more algorithm-specific parameters
        !
        integer(c_int) function nlopt_set_local_optimizer(opt,local_opt) bind(c,name="nlopt_set_local_optimizer")
            import c_int, c_ptr
            type(c_ptr), value :: opt
            type(c_ptr), value :: local_opt
        end function

        integer(c_int) function nlopt_set_population(opt,pop) bind(c,name="nlopt_set_population")
            import c_int, c_ptr
            type(c_ptr), value :: opt
            integer(c_int), value :: pop
        end function
        integer(c_int) function nlopt_get_population(opt) bind(c,name="nlopt_get_population")
            import c_int, c_ptr
            type(c_ptr), value :: opt
        end function

        integer(c_int) function nlopt_set_vector_storage(opt,dim) bind(c,name="nlopt_set_vector_storage")
            import c_int, c_ptr
            type(c_ptr), value :: opt
            integer(c_int), value :: dim
        end function
        integer(c_int) function nlopt_get_vector_storage(opt) bind(c,name="nlopt_get_vecotr_storage")
            import c_int, c_ptr
            type(c_ptr), value :: opt
        end function

        integer(c_int) function nlopt_set_default_initial_step(opt,x) bind(c,name="nlopt_set_default_initial_step")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), intent(in) :: x(nlopt_get_dimension(opt))
        end function
        integer(c_int) function nlopt_set_initial_step(opt,dx) bind(c,name="nlopt_set_initial_step")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), intent(in) :: dx(nlopt_get_dimension(opt))
        end function
        integer(c_int) function nlopt_set_initial_step1(opt,dx) bind(c,name="nlopt_set_initial_step1")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), value :: dx
        end function
        integer(c_int) function nlopt_get_initial_step(opt,x,dx) bind(c,name="nlopt_get_initial_step")
            import c_int, c_ptr, c_double
            type(c_ptr), value :: opt
            real(c_double), intent(in) :: x(nlopt_get_dimension(opt))
            real(c_double), intent(out) :: dx(nlopt_get_dimension(opt))
        end function
    end interface

end module

module nlopt

    use nlopt_enums
    use nlopt_interfaces: srand => nlopt_srand, srand_time => nlopt_srand_time, &
    func => nlopt_func, mfunc => nlopt_mfunc

    implicit none


    ! abstract interface
    !     real(c_double) function vfunc(x,grad,data)
    !         real(c_double), intent(in) :: x(:)
    !         real(c_double), intent(in) :: grad(:)
    !         type(c_ptr), value :: data
    !     end function
    ! end interface

    type :: opt
        type(c_ptr), private :: o = c_null_ptr
        integer(c_int), private :: last_result = NLOPT_FAILURE
        real(c_double), private :: last_optf = huge(last_optf)
        integer(c_int), private :: forced_stop_reason = NLOPT_FORCED_STOP
    contains
        ! procedure, private :: mythrow

        procedure, public :: optimize

        procedure, public :: last_optimize_result
        procedure, public :: last_optimum_value

        procedure, public :: get_algorithm
        procedure, public :: get_algorithm_name
        procedure, public :: get_dimension

        procedure, public :: set_min_objective
        procedure, public :: set_max_objective

        procedure, public :: nlopt_remove_inequality_constraints
        procedure, public :: nlopt_add_inequality_constraint
        procedure, public :: nlopt_remove_equality_constraints
        procedure, public :: nlopt_add_equality_constraint

        procedure, public :: set_lower_bounds
        procedure, public :: get_lower_bounds
        procedure, public :: set_upper_bounds
        procedure, public :: get_upper_bounds
        ! stopping criteria

        procedure, public :: get_numevals

        procedure, public :: get_maxtime
        procedure, public :: set_maxtime

        procedure, public :: get_force_stop
        procedure, public :: set_force_stop
        procedure, public :: force_stop

        ! algorithm-specific parameters
        procedure, public :: set_local_optimizer
        procedure, public :: set_default_initial_step
        procedure, public :: get_initial_step

        procedure, private :: assign_opt
        generic, public :: assignment(=) => assign_opt

        ! Destructor
        final, public :: destroy
    end type

    public :: srand, srand_time, version

    ! Constructors
    interface opt
        module procedure new_opt
        module procedure copy_opt
    end interface

contains

    type(opt) function new_opt(a,n) result(this)
        integer(c_int), intent(in) :: a
        integer(c_int), intent(in) :: n

        this = nlopt_create(a,n)

        this%last_result = NLOPT_FAILURE
        this%last_optf = huge(this%last_optf)
        this%forced_stop_reason = NLOPT_FORCED_STOP
    end function

    type(opt) function copy_opt(f) result(this)
        type(opt), intent(in) :: f

        this%o = nlopt_copy(f%o)
        this%last_result = f%last_result
        this%last_optf = f%last_optf
        this%forced_stop_reason = f%forced_stop_reason
    end function

    subroutine assign_opt(lhs,rhs)
        class(opt), intent(inout) :: lhs
        class(opt), intent(in) :: rhs

        call nlopt_destroy(lhs%o)
        lhs%o = nlopt_copy(rhs%o)
        lhs%last_result = rhs%last_result
        lhs%last_optf = rhs%last_optf
        lhs%forced_stop_reason = rhs%forced_stop_reason
    end subroutine


    subroutine destroy(this)
        call nlopt_destroy(this%o)
    end subroutine

    integer(c_int) function optimize(this,x,opt_f)
        class(opt), intent(inout) :: this
        real(c_double), intent(inout) :: x(this%get_dimension())
        real(c_double), intent(inout) :: opt_f
        integer(c_int) :: ret
        
        this%forced_stop_reason = NLOPT_FORCED_STOP
        ret = nlopt_optimize(this%o,x,opt_f)
        this%last_result = ret
        this%last_optf = opt_f
        ! if (ret == NLOPT_FORCED_STOP) call mythrow(this%forced_stop_reason)
        ! call mythrow(ret)
        optimize = ret
    end function

    ! last_optimize_result
    integer(c_int) function last_optimize_result(this)
        class(opt), intent(in) :: this
        last_optimize_result = this%last_optimize_result
    end function

    real(c_double) function last_optimum_value(this)
        class(opt), intent(in) :: this
        last_optimum_value = o%last_optf
    end function


    ! Accessors
    integer(c_int) function get_algorithm(this)
        class(opt), intent(in) :: this

        get_algorithm = nlopt_get_algorithm(this%o)
    end function

    function get_algorithm_name(this) result(name)
        class(opt), intent(in) :: this
        character(len=256), allocatable :: name
        character(len=256), pointer :: local
        type(c_ptr) :: cptr
        cptr = nlopt_algorithm_name(this%get_algorithm())
        call c_f_pointer(cptr,local)
        name = local
    end function

    integer(c_int) function get_dimension(this)
        class(opt), intent(in) :: this
        get_dimension = nlopt_get_dimension(this%o)
    end function

    ! Set the objective function
